# ETH-flippers-CGSHOP2026

./: CMakeLists.txt  README.md  callgrind.out.13672  instancesStats.json  multipleInputs.py  output  searchSAT.py  searchSATWithoutPyutils.py  searchSAT_552.py  searchSATexpand.py  searchSAToneInstance.py  searchSAToneInstanceLinSearch.py  testSAT.py  verifyAndVisualize.py
XOR-SAT/: CMakeLists.txt  README.md  Utils.hpp  all_pairs.hpp  main.cpp
XOR-SAT/euler/: distances.txt
XOR-SAT/euler/jobs/: CMakeCache.txt  Makefile  cmake_install.cmake  cmsat.sh  cmsat_0.out  exact.sh  izlaz.txt  linear_pairwise.sh  output_pairwise.out  pairwise.sh  random_instance_757_15_5_pairwise.txt  random_instance_823_320_3_pairwise.txt
XOR-SAT/euler/scripts/: CMakeLists.txt  Utils.hpp  all_pairs.hpp  convert_format.py  exact_run.py  izlaz.txt  main.cpp  merge.py  pairwise_linear_run.py  pairwise_run.py  run_all.py
include/: ConvexChainTangent.hpp  CutTriangulation.hpp  DiagonalIntroducerLemma4.hpp  Lemma5Transformer.hpp  Theorem3Transformer.hpp  TriCommon.hpp  differentDiagonals.hpp  flippingDS.hpp  genRandomTriangulations.hpp  generateCNF.hpp  geometryUtils.hpp  inOut.hpp  korderDelaunay.hpp  quadrilateralGraph.hpp
src/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  cmake_install.cmake  differentDiagonals.cpp  flippingDS.cpp  genRandomTriangulations.cpp  generateCNF.cpp  geometryUtils.cpp  inOut.cpp  korderDelaunay.cpp  main.cpp  quadrilateralGraph.cpp
src/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
two_triangulations/: CMakeLists.txt  main.cpp
two_triangulations/data/: example_ps_10_nt2_pdf_random.json
two_triangulations/include/: CutTriangulation.hpp  DiagonalIntroducerLemma4.hpp  ForwardFlipCanonicalizer.hpp  Lemma5Transformer.hpp  Proposition1Inserter.hpp  Theorem2Transformer.hpp  TriCommon.hpp
two_triangulations/tests/: CutTriangulationTests.hpp  DiagonalIntroducerLemma4Tests.hpp  ForwardFlipCanonicalizerTests.hpp  Lemma4ManualHarness.hpp  Lemma4ManualTest.hpp  Lemma5Tests.hpp  Observation3Tests.hpp  Proposition1Tests.hpp  Theorem2Tests.hpp  Theorem3Tests.hpp  main_tests.cpp
